tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__wchar_t_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/wchar_t-1.c" (c, x86_64-unknown-linux-gnu)
global x : s32i[2] = [196] [external, default, align 4, dso_local]
global y : s32i = 196 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %25 = const 8 : u64i
        %26 = const 4 : u64i
        %27 = div %25, %26 : u64i
        %28 = const 2 : u64i
        %29 = cmp ne %27, %28 : bool
        if %29 {
            %30 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %10 = const 0 : s64i
        %11 = get_global @x : s32i[2]*
        %12 = get_element %11[%10] : s32i*
        %13 = load %12 : s32i, align 4
        %14 = const 196 : s32i
        %15 = cmp ne %13, %14 : bool
        %16 = ternary %15 ? { : bool
            %24 = const true : bool
            yield %24
        } : {
            %18 = const 1 : s64i
            %19 = get_global @x : s32i[2]*
            %20 = get_element %19[%18] : s32i*
            %21 = load %20 : s32i, align 4
            %22 = const 0 : s32i
            %23 = cmp ne %21, %22 : bool
            yield %23
        }
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %5 = get_global @y : s32i*
        %6 = load %5 : s32i, align 4
        %7 = const 196 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
