tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__zero_struct_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/zero-struct-2.c" (c, x86_64-unknown-linux-gnu)
global ii : s32i = 0 [external, default, align 4, dso_local]

fn one_raw_spinlock() -> void [external, c, no_inline, dso_local, nothrow] {
    %12 = alloca rec_raw_spinlock_t, "__retval", align 1
    %13 = get_global @ii : s32i*
    %14 = load %13 : s32i, align 4
    %15 = inc %14 : s32i [nsw]
    store %15, %13, align 4
    %16 = load %12 : rec_raw_spinlock_t
    return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_spinlock_t, "lock", align 1
    %2 = const 0 : s32i
    store %2, %0
    %3 = cast(bitcast) %1 : rec_raw_spinlock_t*
    call @one_raw_spinlock() [all]
    %4 = const poison : rec_raw_spinlock_t
    store %4, %3, align 1
    scope {
        %7 = get_global @ii : s32i*
        %8 = load %7 : s32i, align 4
        %9 = const 1 : s32i
        %10 = cmp ne %8, %9 : bool
        if %10 {
            %11 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
