tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__zerolen_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/zerolen-1.c" (c, x86_64-unknown-linux-gnu)
global entry : rec_iso_directory_record = zero [external, default, align 1, dso_local]

fn set(%arg0: rec_iso_directory_record*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_iso_directory_record*):
        %29 = alloca rec_iso_directory_record*, "p", align 8
        store %arg0, %29
        %30 = const 1 : s8i
        %31 = const 0 : s64i
        %32 = load %29 : rec_iso_directory_record*, align 8
        %33 = get_member %32[0] "carr" : s8i[4]*
        %34 = get_element %33[%31] : s8i*
        store %30, %34, align 1
        %35 = const 0 : s8i
        %36 = const 1 : s64i
        %37 = load %29 : rec_iso_directory_record*, align 8
        %38 = get_member %37[0] "carr" : s8i[4]*
        %39 = get_element %38[%36] : s8i*
        store %35, %39, align 1
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_iso_directory_record*, "de", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @entry : rec_iso_directory_record*
    store %3, %1, align 8
    %4 = load %1 : rec_iso_directory_record*, align 8
    call @set(%4) [all]
    scope {
        %6 = const 0 : s64i
        %7 = load %1 : rec_iso_directory_record*, align 8
        %8 = get_member %7[1] "u" : rec_anon2E0*
        %9 = get_member %8[0] "name_len" : u8i[1]*
        %10 = get_element %9[%6] : u8i*
        %11 = load %10 : u8i, align 1
        %12 = cast(integral) %11 : s32i
        %13 = const 1 : s32i
        %14 = cmp eq %12, %13 : bool
        %15 = ternary %14 ? { : bool
            %20 = const 0 : s64i
            %21 = load %1 : rec_iso_directory_record*, align 8
            %22 = get_member %21[1] "u" : rec_anon2E0*
            %23 = get_member %22[1] "name" : s8i[0]*
            %24 = get_element %23[%20] : s8i*
            %25 = load %24 : s8i, align 1
            %26 = cast(integral) %25 : s32i
            %27 = const 0 : s32i
            %28 = cmp eq %26, %27 : bool
            yield %28
        } : {
            %19 = const false : bool
            yield %19
        }
        if %15 {
            %17 = get_global @exit : ((s32i) -> void)*
            %18 = const 0 : s32i
            call @exit(%18) [all]
            yield
        } else {
            %16 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = load %0 : s32i
    return %5
}
